--- a/Family.html
+++ b/Family.html
@@ -33,7 +33,7 @@
      <td>dancing ⭐⭐</td>
    </tr>
     </table>
-    <form class="" action="index.html" method="post">
+    <form class="" action="https://www.google.com/" method="post">
       <label for="">YOUR D.O.B.</label>
       <input type="date" name="" value=""><br>
       <input type="submit" name="" ><br>
